cabal-version:      3.0
name:               kafka-exchange-network
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

library chanimpl
  exposed-modules: ChannelNetwork
  build-depends:
    , base >=4.17.1.0
    , byteslice >=0.2.11
    , error-codes >=0.1.0.1
    , network >=3.1.4
    , network-unexceptional >=0.1.2
    , text >=2.0.2
  hs-source-dirs: src-chanimpl
  default-language: Haskell2010

library
  build-depends:
    , base >=4.17.1.0
    , kafka-exchange
    , chanimpl
  hs-source-dirs: src
  default-language: Haskell2010
  reexported-modules: Kafka.Exchange.Network
  mixins:
    kafka-exchange (Kafka.Exchange as Kafka.Exchange.Network)
      requires (ChannelSig as ChannelNetwork)
